--- a/port/package.json
+++ b/port/package.json
@@ -17,10 +17,13 @@
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-player": "^2.16.0",
     "react-router-dom": "^6.23.1",
     "react-slick": "^0.30.2",
     "react-tsparticles": "^2.12.2",
     "react-typed": "^2.0.12",
+    "react-video-js": "^0.1.96",
+    "react-video-js-player": "^1.1.1",
     "slick-carousel": "^1.8.1",
     "tsparticles": "^3.4.0"
   },
